test/cli/test-deleting-policy/deleting-pod-by-namespaceObject/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: kyverno-test.yaml
policies:
- policy.yaml
resources:
- resource.yaml
results:
- isDeletingPolicy: true
  kind: Pod
  policy: cleanup-old-test-pods
  resources:
  - nginx-1
  - nginx-2
  result: fail
- isDeletingPolicy: true
  kind: Pod
  policy: cleanup-old-test-pods
  resources:
  - test/test-nginx-1
  - test/test-nginx-2
  result: pass
variables: values.yaml
