test/cli/test-deleting-policy/deleting-pod-by-namespaceObject/values.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Value
metadata:
  name: values
namespaces:
- apiVersion: v1
  kind: namespace
  metadata:
    labels:
      environment: test
    name: test
- apiVersion: v1
  kind: namespace
  metadata:
    labels:
      environment: default
    name: default
